# turf-swift

./: .gitignore  .gitlab-ci.yml  .spi.yml  .travis.yml  CMakeLists.txt  Gemfile  Geometry.swift.podspec  LICENSE.md  Makefile  Package.resolved  Package.swift  README.md  RELEASE.md  Turf.podspec  codecov.yml  index.html  turf-swift.podspec
.circleci/: config.yml
.fastlane/: Fastfile  Matchfile  README.md  report.xml
0.1.0/: Extensions.html  Typealiases.html  index.html
0.1.1/: undocumented.json
0.2.0/: Enums.html  Protocols.html  Structs.html  index.html  undocumented.json
0.2.1/: Classes.html  Extensions.html  Protocols.html  Structs.html  Typealiases.html  index.html  undocumented.json
0.3.0/: Structs.html  Typealiases.html  index.html
0.4.0/: Classes.html  Protocols.html  Structs.html  Typealiases.html  index.html  undocumented.json
0.5.0/: Extensions.html  Structs.html  Typealiases.html  search.json  undocumented.json
1.0.0/: Enums.html  Extensions.html  Functions.html  Protocols.html  Structs.html  index.html
1.1.0/: Enums.html  Extensions.html  Structs.html  Typealiases.html  index.html  undocumented.json
1.2.0/: Classes.html  Enums.html  Extensions.html  Functions.html  Typealiases.html  index.html  undocumented.json
1.2.0-beta.1/: Classes.html  Enums.html  Extensions.html  Functions.html  index.html
1.2.0-rc.1/: Structs.html
2.0.0/: Enums.html  Structs.html  Typealiases.html  search.json
2.0.0-alpha.1/: Functions.html  Structs.html  index.html  search.json
2.0.0-alpha.2/: Classes.html  Functions.html  Structs.html  Typealiases.html
2.0.0-alpha.3/: Classes.html  Extensions.html  Functions.html  index.html  undocumented.json
2.0.0-beta.1/: Classes.html  Enums.html  Functions.html  Typealiases.html  index.html  search.json
2.0.0-rc.1/: Classes.html  Enums.html  Extensions.html  Functions.html  Protocols.html  index.html  search.json  undocumented.json
2.0.0-rc.2/: Enums.html  Extensions.html  Typealiases.html  search.json  undocumented.json
2.1.0/: Enums.html  (+4 more)
Sources/: CMakeLists.txt  Turf.h
Sources/GeoJSONKitTurf/: ClosestCoordinate.swift  ConvexHull.swift  CoreLocation.swift  GeoJSON+Helpers.swift  Position+Helpers.swift  RadianCoordinate2D.swift  Simplify.swift  Spline.swift  Turf+BoundingBox.swift  Turf+Clipper2.swift  Turf+GeometryObject.swift  Turf+LineString.swift  Turf+LinearRing.swift  Turf+Polygon.swift  Turf.swift
Sources/GeoJSONKitTurf/algorithms/: DouglasPeucker.swift  MartinezRuedaFeito.swift  MonotoneChain.swift  VisvalingamWhyatt.swift
Sources/GeoKitten/: main.swift
Sources/Turf/: BoundingBox.swift  Codable.swift  CoreLocation.swift  Feature.swift  FeatureCollection.swift  FeatureIdentifier.swift  GeoJSON.swift  GeoJSONGeometries.swift  Geometry.swift  Info.plist  JSON.swift  LineString.swift  MultiLineString.swift  MultiPoint.swift  MultiPolygon.swift  Point.swift  Polygon.swift  RadianCoordinate2D.swift  Ring.swift  Simplifier.swift  Spline.swift  Turf.swift  WKT.swift
Sources/Turf/Consumer/: Consumer+WKT.swift  Consumer.swift
Sources/Turf/GeoJSON/: FeatureIdentifier.swift  GeoJSON.swift  Geometry.swift
Sources/Turf/Geometries/: GeometryCollection.swift  LineString.swift  MultiLineString.swift  MultiPoint.swift  MultiPolygon.swift  Point.swift  Polygon.swift
Tests/: CMakeLists.txt  Fixture.swift  LinuxMain.swift
Tests/Clipper2LibTests/: ClipperTests.swift
Tests/GeoJSONKitTurfTests/: BoundingBoxTests.swift  Fixture.swift  LineStringTests.swift  MultiPolygonTests.swift  PolygonTests.swift  PositionTests.swift  RadianCoordinate2DTests.swift  TurfTests.swift  XCTest+Save.swift
Tests/GeoJSONKitTurfTests/Fixtures/: inverell.geojson  multipolygon.geojson  polygon.geojson
Tests/TurfTests/: BoundingBoxTests.swift  FeatureCollectionTests.swift  FeatureIdentifier.swift  Fixture.swift  GeoJSONTests.swift  GeometryCollectionTests.swift  GeometryTests.swift  Info.plist  JSONTests.swift  LineStringTests.swift  LocationCoordinate2DTests.swift  MultiLineStringTests.swift  MultiPointTests.swift  MultiPolygonTests.swift  PointTests.swift  PolygonTests.swift  RadianCoordinate2DTests.swift  TurfTests.swift  WKTTests.swift
Tests/TurfTests/Fixtures/: featurecollection.geojson  navajo.geojson  point.geojson  polygon.geojson  simple-line.geojson
Tests/TurfTests/Fixtures/simplify/in/: featurecollection.geojson  polygon.geojson
(+1192 files in other folders)
